--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="//fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Material+Icons|Open+Sans:400,400i,600,600i" rel="stylesheet">
     <title>Elm-pad</title>
   </head>
   <body>
